rk3568: Enable Machine ID

--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -25,6 +25,7 @@ CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
 CONFIG_STATE=y
 CONFIG_BOOTCHOOSER=y
 CONFIG_RESET_SOURCE=y
+CONFIG_MACHINE_ID=y
 CONFIG_SYSTEMD_OF_WATCHDOG=y
 CONFIG_FASTBOOT_SPARSE=y
 CONFIG_DEBUG_LL=y
