imx8: Build imx-usb-boot tool

--- a/arch/arm/configs/diasom_imx8m_evb_defconfig
+++ b/arch/arm/configs/diasom_imx8m_evb_defconfig
@@ -118,3 +118,4 @@ CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
 CONFIG_ZLIB=y
 # CONFIG_MISSING_FIRMWARE_ERROR is not set
+CONFIG_ARCH_IMX_USBLOADER=y
