imx8m: Revise defconfig (part 2)

--- a/arch/arm/configs/diasom_imx8m_evb_defconfig
+++ b/arch/arm/configs/diasom_imx8m_evb_defconfig
@@ -15,11 +15,14 @@ CONFIG_BOOTM_OFTREE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 CONFIG_BLSPEC=y
 CONFIG_CONSOLE_ACTIVATE_NONE=y
+CONFIG_CONSOLE_ALLOW_COLOR=y
 CONFIG_PBL_CONSOLE=y
 CONFIG_CONSOLE_RATP=y
 CONFIG_PARTITION_DISK_EFI=y
 CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
 CONFIG_RESET_SOURCE=y
+CONFIG_MACHINE_ID=y
+CONFIG_SYSTEMD_OF_WATCHDOG=y
 CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_IMX_UART_PORT=2
 CONFIG_CMD_BOOTROM=y
@@ -119,5 +122,6 @@ CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
 CONFIG_ZLIB=y
+CONFIG_DIGEST_SHA1_ARM64_CE=y
 # CONFIG_MISSING_FIRMWARE_ERROR is not set
 CONFIG_ARCH_IMX_USBLOADER=y
