imx8m: Add test overlay support

--- a/arch/arm/boards/diasom-imx8m-evb/Makefile
+++ b/arch/arm/boards/diasom-imx8m-evb/Makefile
@@ -3,3 +3,4 @@
 obj-y	+= board.o
 lwl-y	+= lowlevel.o lpddr4-timing.o
 bbenv-y	+= defaultenv-diasom-imx8m-evb
+extra-y += imx8mm-diasom-evb-test.dtbo
