imx8m: Probe MCI at startup

--- a/arch/arm/configs/diasom_imx8m_evb_defconfig
+++ b/arch/arm/configs/diasom_imx8m_evb_defconfig
@@ -102,7 +102,9 @@ CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_AUTOSTART is not set
 CONFIG_USB_GADGET_SERIAL=y
 CONFIG_MCI=y
+CONFIG_MCI_STARTUP=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
+CONFIG_MCI_MMC_GPP_PARTITIONS=y
 CONFIG_MCI_IMX_ESDHC=y
 CONFIG_MFD_ROHM_BD718XX=y
 CONFIG_SRAM=y
