--- a/arch/arm/configs/diasom_imx8m_evb_defconfig
+++ b/arch/arm/configs/diasom_imx8m_evb_defconfig
@@ -14,6 +14,7 @@ CONFIG_BOOTM_INITRD=y
 CONFIG_BOOTM_OFTREE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 CONFIG_BLSPEC=y
+CONFIG_SYSTEM_PARTITIONS=y
 CONFIG_CONSOLE_ACTIVATE_NONE=y
 CONFIG_CONSOLE_ALLOW_COLOR=y
 CONFIG_PBL_CONSOLE=y
