--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -96,9 +96,15 @@
 				#address-cells = <1>;
 				#size-cells = <0>;
 
-				csi_in: endpoint@0 {
+				xc7160_in: endpoint@0 {
 					reg = <0>;
-					remote-endpoint = <&xc7160b_out>;
+					remote-endpoint = <&xc7160_out>;
+					data-lanes = <1 2 3 4>;
+				};
+
+				imx335_in: endpoint@1 {
+					reg = <1>;
+					remote-endpoint = <&imx335_out>;
 					data-lanes = <1 2 3 4>;
 				};
 			};
@@ -244,19 +250,17 @@
 		};
 	};
 
-	vcc5v0_sys: vcc5v0-sys-regulator {
+	dummy: dummy-regulator {
 		compatible = "regulator-fixed";
-		regulator-name = "5v0_sys";
-		regulator-min-microvolt = <5000000>;
-		regulator-max-microvolt = <5000000>;
+		regulator-name = "dummy";
 	};
 
-	vcc3v3_sys: vcc3v3-sys-regulator {
+	vcc0v9_cpu: vcc0v9-cpu-regulator {
 		compatible = "regulator-fixed";
-		regulator-name = "3v3_sys";
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		vin-supply = <&vcc5v0_sys>;
+		regulator-name = "0v9_cpu";
+		regulator-min-microvolt = <900000>;
+		regulator-max-microvolt = <900000>;
+		vin-supply = <&vcc3v3_pmu>;
 	};
 
 	vcc1v8_sys: vcc1v8-sys-regulator {
@@ -265,14 +269,6 @@
 		regulator-min-microvolt = <1800000>;
 		regulator-max-microvolt = <1800000>;
 		vin-supply = <&vcc3v3_sys>;
-	};
-
-	vdd0v9_cpu: vdd0v9-cpu-regulator {
-		compatible = "regulator-fixed";
-		regulator-name = "0v9_cpu";
-		regulator-min-microvolt = <900000>;
-		regulator-max-microvolt = <900000>;
-		vin-supply = <&vcc3v3_pmu>;
 	};
 
 	vcc3v3_pcie20: vcc3v3-pcie20-pwr-regulator {
@@ -313,6 +309,21 @@
 		vin-supply = <&vcc3v3_pcie30>;
 	};
 
+	vcc3v3_sys: vcc3v3-sys-regulator {
+		compatible = "regulator-fixed";
+		regulator-name = "3v3_sys";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+		vin-supply = <&vcc5v0_sys>;
+	};
+
+	vcc5v0_sys: vcc5v0-sys-regulator {
+		compatible = "regulator-fixed";
+		regulator-name = "5v0_sys";
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
+	};
+
 	vcc5v0_usb3_host1: vcc5v0-usb3-host1-regulator {
 		pinctrl-names = "default";
 		pinctrl-0 = <&usb3_host1_en_pins>;
@@ -338,9 +349,14 @@
 		vin-supply = <&vcc5v0_sys>;
 	};
 
-	dummy: dummy-regulator {
+	vcccam: vcc-cam-regulator {
+		pinctrl-names = "default";
+		pinctrl-0 = <&csi0_pwr>;
 		compatible = "regulator-fixed";
-		regulator-name = "dummy";
+		enable-active-high;
+		gpio = <&gpio2 RK_PD2 GPIO_ACTIVE_HIGH>;
+		regulator-name = "vcc_cam";
+		regulator-always-on;
 	};
 };
 
@@ -361,19 +377,19 @@
 };
 
 &cpu0 {
-	cpu-supply = <&vdd0v9_cpu>;
+	cpu-supply = <&vcc0v9_cpu>;
 };
 
 &cpu1 {
-	cpu-supply = <&vdd0v9_cpu>;
+	cpu-supply = <&vcc0v9_cpu>;
 };
 
 &cpu2 {
-	cpu-supply = <&vdd0v9_cpu>;
+	cpu-supply = <&vcc0v9_cpu>;
 };
 
 &cpu3 {
-	cpu-supply = <&vdd0v9_cpu>;
+	cpu-supply = <&vcc0v9_cpu>;
 };
 
 &cpu0_opp_table {
@@ -779,9 +795,25 @@
 		#sound-dai-cells = <0>;
 	};
 
+	camera@1a {
+		compatible = "sony,imx335";
+		reg = <0x1a>;
+		clocks = <&xin24m>;
+		power-domains = <&power RK3568_PD_VI>;
+		status = "disabled";
+
+		port {
+			imx335_out: endpoint {
+				data-lanes = <1 2 3 4>;
+				remote-endpoint = <&imx335_in>;
+				link-frequencies = /bits/ 64 <594000000>;
+			};
+		};
+	};
+
 	camera@1b {
 		pinctrl-names = "default";
-		pinctrl-0 = <&cif_clk &csi0_pins>;
+		pinctrl-0 = <&cif_clk &csi0_rst>;
 		compatible = "firefly,xc7160";
 		reg = <0x1b>;
 		clocks = <&cru CLK_CIF_OUT>;
@@ -793,9 +825,9 @@
 		dvdd-supply = <&vcc5v0_sys>;
 
 		port {
-			xc7160b_out: endpoint {
+			xc7160_out: endpoint {
 				data-lanes = <1 2 3 4>;
-				remote-endpoint = <&csi_in>;
+				remote-endpoint = <&xc7160_in>;
 			};
 		};
 	};
@@ -1072,16 +1104,22 @@
 	};
 
 	csi {
-		csi0_pins: csi0-pins {
-			/* CLKOUT = cif_clk */
+		/* csi0 clkout = cif_clk */
+
+		csi0_rst: csi0-rst-pins {
 			rockchip,pins =
-				<2 RK_PD2 RK_FUNC_GPIO &pcfg_pull_up>,		/* CSI_PWREN0 */
 				<3 RK_PB6 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_RESET0# */
 		};
 
+		csi0_pwr: csi0-pwr-pins {
+			rockchip,pins =
+				<2 RK_PD2 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_PWREN0 */
+		};
+
+		/* csi1 clkout = refclk_pins */
+
 		/omit-if-no-ref/
 		csi1_pins: csi1-pins {
-			/* CLKOUT = refclk_pins */
 			rockchip,pins =
 				<0 RK_PD4 RK_FUNC_GPIO &pcfg_pull_up>,		/* CSI_PWREN1 */
 				<1 RK_PB3 RK_FUNC_GPIO &pcfg_pull_up>;		/* CSI_RESET1# */
