imx8: Describe some GPIO connections into test overlay

--- a/arch/arm/dts/imx8mm-diasom-evb.dts
+++ b/arch/arm/dts/imx8mm-diasom-evb.dts
@@ -82,7 +82,7 @@
 		};
 	};
 
-	spdif-sound {
+	spdif_sound: spdif-sound {
 		compatible = "fsl,imx-audio-spdif";
 		model = "SPDIF";
 		spdif-controller = <&spdif1>;
