rk3568: Add camera type detection code

--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -824,6 +824,7 @@
 		avdd-supply = <&vcc5v0_sys>;
 		dovdd-supply = <&vcc5v0_sys>;
 		dvdd-supply = <&vcc5v0_sys>;
+		status = "disabled";
 
 		port {
 			xc7160_out: endpoint {
