--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -113,11 +113,8 @@
 
 			port@1 {
 				reg = <1>;
-				#address-cells = <1>;
-				#size-cells = <0>;
 
-				csi_out: endpoint@0 {
-					reg = <0>;
+				csi_out: endpoint {
 					remote-endpoint = <&isp_in>;
 					data-lanes = <1 2 3 4>;
 				};
