--- a/arch/arm/boards/diasom-rk3568-evb/Makefile
+++ b/arch/arm/boards/diasom-rk3568-evb/Makefile
@@ -3,4 +3,5 @@
 obj-y	+= board.o
 lwl-y	+= lowlevel.o
 bbenv-y	+= defaultenv-diasom-rk3568-evb
+extra-y	+= rk3568-diasom-evb-lvds.dtbo
 extra-y	+= rk3568-diasom-evb-test.dtbo
