dts: Add recommended 'chassis-type' property

--- a/arch/arm/dts/imx8mm-diasom-evb.dts
+++ b/arch/arm/dts/imx8mm-diasom-evb.dts
@@ -12,6 +12,7 @@
 / {
 	model = "Diasom DS-IMX8M-EVB";
 	compatible = "diasom,ds-imx8m-evb", "fsl,imx8mm";
+	chassis-type = "embedded";
 
 	chosen {
 		stdout-path = "serial1:115200n8";
