--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -12,6 +12,7 @@
 #include "rk356x.dtsi"
 
 #define USBOTG_HOST
+#define VERSION2
 
 / {
 	model = "Diasom DS-RK3568-EVB";
@@ -447,25 +448,45 @@
 };
 
 &cpu0 {
+#ifdef VERSION2
+	cpu-supply = <&vdd_cpu>;
+#else
 	cpu-supply = <&vcc0v9_cpu>;
+#endif
 };
 
 &cpu1 {
+#ifdef VERSION2
+	cpu-supply = <&vdd_cpu>;
+#else
 	cpu-supply = <&vcc0v9_cpu>;
+#endif
 };
 
 &cpu2 {
+#ifdef VERSION2
+	cpu-supply = <&vdd_cpu>;
+#else
 	cpu-supply = <&vcc0v9_cpu>;
+#endif
 };
 
 &cpu3 {
+#ifdef VERSION2
+	cpu-supply = <&vdd_cpu>;
+#else
 	cpu-supply = <&vcc0v9_cpu>;
+#endif
 };
 
 &cpu0_opp_table {
+#ifdef VERSION2
+
+#else
 	/delete-node/ opp-1608000000;
 	/delete-node/ opp-1800000000;
 	/delete-node/ opp-1992000000;
+#endif
 };
 
 &dsi0 {
@@ -565,6 +586,23 @@
 	clock-frequency = <1000000>;
 	status = "okay";
 
+	vdd_cpu: regulator@1c {
+		compatible = "tcs,tcs4525";
+		reg = <0x1c>;
+		fcs,suspend-voltage-selector = <1>;
+		regulator-name = "vdd_cpu";
+		regulator-always-on;
+		regulator-boot-on;
+		regulator-min-microvolt = <800000>;
+		regulator-max-microvolt = <1150000>;
+		regulator-ramp-delay = <2300>;
+		vin-supply = <&vcc5v0_sys>;
+
+		regulator-state-mem {
+			regulator-off-in-suspend;
+		};
+	};
+
 	pmic@20 {
 		pinctrl-names = "default";
 		pinctrl-0 = <&pmic_pins &pmic_int_pins &clk32k_in>;
@@ -592,8 +630,13 @@
 				regulator-always-on;
 				regulator-boot-on;
 				regulator-initial-mode = <0x2>;
+#ifdef VERSION2
+				regulator-min-microvolt = <500000>;
+				regulator-max-microvolt = <1350000>;
+#else
 				regulator-min-microvolt = <900000>;
 				regulator-max-microvolt = <900000>;
+#endif
 				regulator-ramp-delay = <6001>;
 
 				regulator-state-mem {
@@ -605,8 +648,13 @@
 				regulator-name = "vdd_gpu";
 				regulator-always-on;
 				regulator-initial-mode = <0x2>;
+#ifdef VERSION2				
+				regulator-min-microvolt = <500000>;
+				regulator-max-microvolt = <1350000>;
+#else		
 				regulator-min-microvolt = <825000>;
-				regulator-max-microvolt = <1000000>;
+				regulator-max-microvolt = <1000000>;			
+#endif
 				regulator-ramp-delay = <6001>;
 
 				regulator-state-mem {
@@ -628,8 +676,13 @@
 			vdd_npu: DCDC_REG4 {
 				regulator-name = "vdd_npu";
 				regulator-initial-mode = <0x2>;
+#ifdef VERSION2
+				regulator-min-microvolt = <500000>;
+				regulator-max-microvolt = <1350000>;
+#else
 				regulator-min-microvolt = <900000>;
 				regulator-max-microvolt = <900000>;
+#endif
 				regulator-ramp-delay = <6001>;
 
 				regulator-state-mem {
