rk3568: Use upstream kernel changes for imx335 camera

--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -923,7 +923,7 @@
 		power-domains = <&power RK3568_PD_VI>;
 		avdd-supply = <&vcc_cam>;
 		dvdd-supply = <&vcc_cam>;
-		dovdd-supply = <&vcc_cam>;
+		ovdd-supply = <&vcc_cam>;
 		status = "disabled";
 
 		port {
