rk3568: Use overlay to handle SOM version 2

--- a/arch/arm/boards/diasom-rk3568-evb/Makefile
+++ b/arch/arm/boards/diasom-rk3568-evb/Makefile
@@ -5,3 +5,4 @@ lwl-y	+= lowlevel.o
 bbenv-y	+= defaultenv-diasom-rk3568-evb
 extra-y	+= rk3568-diasom-evb-lvds.dtbo
 extra-y	+= rk3568-diasom-evb-test.dtbo
+extra-y	+= rk3568-diasom-evb-ver2.dtbo
