--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -43,6 +43,7 @@ CONFIG_CMD_RESET=y
 CONFIG_CMD_UIMAGE=y
 CONFIG_CMD_BOOTCHOOSER=y
 CONFIG_CMD_PARTITION=y
+CONFIG_CMD_PARTED=y
 CONFIG_CMD_EXPORT=y
 CONFIG_CMD_DEFAULTENV=y
 CONFIG_CMD_LOADENV=y
