imx8mm: Enable overdrive mode
The SoC runs at a high enough voltage to support overdrive
mode, so include the imx8mm-overdrive.dtsi file to increase
the VPU and GPU clocks to their overdrive speeds.

--- a/arch/arm/dts/imx8mm-diasom-evb.dts
+++ b/arch/arm/dts/imx8mm-diasom-evb.dts
@@ -4,6 +4,7 @@
 /dts-v1/;
 
 #include <arm64/freescale/imx8mm.dtsi>
+#include <arm64/freescale/imx8mm-overdrive.dtsi>
 #include <dt-bindings/net/ti-dp83867.h>
 #include <dt-bindings/phy/phy-imx8-pcie.h>
 
