Cleanup diasom directories

--- a/arch/arm/boards/diasom-imx8m-evb/Makefile
+++ b/arch/arm/boards/diasom-imx8m-evb/Makefile
@@ -3,4 +3,7 @@
 obj-y	+= board.o
 lwl-y	+= lowlevel.o lpddr4-timing.o
 bbenv-y	+= defaultenv-diasom-imx8m-evb
-extra-y += imx8mm-diasom-evb-test.dtbo
+extra-y	+= imx8mm-diasom-evb-test.dtbo
+
+clean-files	:= *.dtb *.dtb.S .*.dtc .*.pre .*.dts *.dtb.z
+clean-files	+= *.dtbo *.dtbo.S .*.dtso
