--- a/arch/arm/boards/diasom-rk3568-evb/Makefile
+++ b/arch/arm/boards/diasom-rk3568-evb/Makefile
@@ -6,3 +6,6 @@ bbenv-y	+= defaultenv-diasom-rk3568-evb
 extra-y	+= rk3568-diasom-evb-lvds.dtbo
 extra-y	+= rk3568-diasom-evb-test.dtbo
 extra-y	+= rk3568-diasom-evb-ver2.dtbo
+
+clean-files	:= *.dtb *.dtb.S .*.dtc .*.pre .*.dts *.dtb.z
+clean-files	+= *.dtbo *.dtbo.S .*.dtso
