--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -6,6 +6,7 @@ CONFIG_MMU=y
 CONFIG_MALLOC_SIZE=0x0
 CONFIG_MALLOC_TLSF=y
 CONFIG_KALLSYMS=y
+CONFIG_PANIC_HANG=y
 CONFIG_PROMPT="barebox> "
 CONFIG_BAUDRATE=1500000
 CONFIG_HUSH_FANCY_PROMPT=y
@@ -116,6 +117,7 @@ CONFIG_USB_GADGET_SERIAL=y
 CONFIG_USB_GADGET_FASTBOOT=y
 CONFIG_USB_GADGET_MASS_STORAGE=y
 CONFIG_MCI=y
+CONFIG_MCI_TUNING=y
 CONFIG_MCI_STARTUP=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 CONFIG_MCI_MMC_GPP_PARTITIONS=y
