rk3568: Add fan53555 driver

--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -136,6 +136,7 @@ CONFIG_NVMEM_RMEM=y
 CONFIG_NVMEM_ROCKCHIP_OTP=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
+CONFIG_REGULATOR_FAN53555=y
 CONFIG_REGULATOR_RK808=y
 CONFIG_GENERIC_PHY=y
 CONFIG_PHY_ROCKCHIP_INNO_USB2=y
