--- a/arch/arm/configs/diasom_rk3568_evb_defconfig
+++ b/arch/arm/configs/diasom_rk3568_evb_defconfig
@@ -15,7 +15,7 @@ CONFIG_AUTO_COMPLETE=y
 CONFIG_BOOTM_SHOW_TYPE=y
 CONFIG_BOOTM_VERBOSE=y
 CONFIG_BOOTM_OFTREE=y
-CONFIG_BOOTM_OFTREE_UIMAGE=y
+# CONFIG_BOOTM_UIMAGE is not set
 CONFIG_BLSPEC=y
 CONFIG_SYSTEM_PARTITIONS=y
 CONFIG_CONSOLE_ACTIVATE_NONE=y
@@ -95,7 +95,6 @@ CONFIG_CMD_DHRYSTONE=y
 CONFIG_NET=y
 CONFIG_NET_NFS=y
 CONFIG_NET_NETCONSOLE=y
-CONFIG_OFDEVICE=y
 CONFIG_OF_BAREBOX_DRIVERS=y
 CONFIG_OF_OVERLAY_LIVE=y
 CONFIG_AIODEV=y
