--- a/arch/arm/dts/rk3568-diasom-som.dtsi
+++ b/arch/arm/dts/rk3568-diasom-som.dtsi
@@ -175,6 +175,11 @@
 	status = "okay";
 };
 
+&hdmi {
+	avdd-0v9-supply = <&vdda0v9_image>;
+	avdd-1v8-supply = <&vcca1v8_image>;
+};
+
 &i2c0 {
 	clock-frequency = <1000000>;
 	status = "okay";
