--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -32,34 +32,6 @@
 		};
 	};
 
-	can1: can@fe580000 {
-		pinctrl-names = "default";
-		pinctrl-0 = <&can1m0_pins>;
-		compatible = "rockchip,rk3568-can-2.0";
-		reg = <0x0 0xfe580000 0x0 0x1000>;
-		interrupts = <GIC_SPI 2 IRQ_TYPE_LEVEL_HIGH>;
-		clocks = <&cru CLK_CAN1>, <&cru PCLK_CAN1>;
-		clock-names = "baudclk", "apb_pclk";
-		resets = <&cru SRST_CAN1>, <&cru SRST_P_CAN1>;
-		reset-names = "can", "can-apb";
-		tx-fifo-depth = <1>;
-		rx-fifo-depth = <6>;
-	};
-
-	can2: can@fe590000 {
-		pinctrl-names = "default";
-		pinctrl-0 = <&can2m0_pins>;
-		compatible = "rockchip,rk3568-can-2.0";
-		reg = <0x0 0xfe590000 0x0 0x1000>;
-		interrupts = <GIC_SPI 3 IRQ_TYPE_LEVEL_HIGH>;
-		clocks = <&cru CLK_CAN2>, <&cru PCLK_CAN2>;
-		clock-names = "baudclk", "apb_pclk";
-		resets = <&cru SRST_CAN2>, <&cru SRST_P_CAN2>;
-		reset-names = "can", "can-apb";
-		tx-fifo-depth = <1>;
-		rx-fifo-depth = <6>;
-	};
-
 	csi2_dphy0: csi2-dphy0 {
 		compatible = "rockchip,rk3568-csi2-dphy";
 		rockchip,hw = <&csi2_dphy_hw>;
@@ -349,6 +321,18 @@
 };
 
 /delete-node/ &xin32k;
+
+&can1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&can1m0_pins>;
+	status = "okay";
+};
+
+&can2 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&can2m0_pins>;
+	status = "okay";
+};
 
 &combphy1 {
 	/* USB3.0 HOST1 */
