--- a/arch/arm/dts/rk3568-diasom-evb.dts
+++ b/arch/arm/dts/rk3568-diasom-evb.dts
@@ -32,51 +32,6 @@
 		};
 	};
 
-	csi2_dphy0: csi2-dphy0 {
-		compatible = "rockchip,rk3568-csi2-dphy";
-		rockchip,hw = <&csi2_dphy_hw>;
-
-		ports {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			port@0 {
-				reg = <0>;
-				#address-cells = <1>;
-				#size-cells = <0>;
-
-				xc7160_in: endpoint@0 {
-					reg = <0>;
-					remote-endpoint = <&xc7160_out>;
-					data-lanes = <1 2 3 4>;
-				};
-
-				imx335_in: endpoint@1 {
-					reg = <1>;
-					remote-endpoint = <&imx335_out>;
-					data-lanes = <1 2 3 4>;
-				};
-			};
-
-			port@1 {
-				reg = <1>;
-
-				csi_out: endpoint {
-					remote-endpoint = <&isp_in>;
-					data-lanes = <1 2 3 4>;
-				};
-			};
-		};
-	};
-
-	csi2_dphy_hw: csi2-dphy-hw@fe870000 {
-		compatible = "rockchip,rk3568-csi2-dphy-hw";
-		reg = <0x0 0xfe870000 0x0 0x1000>;
-		clocks = <&cru PCLK_MIPICSIPHY>;
-		clock-names = "pclk";
-		rockchip,grf = <&grf>;
-	};
-
 	backlight: backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm5 0 25000 0>;
@@ -93,49 +48,6 @@
 		port {
 			hdmi_connector_in: endpoint {
 				remote-endpoint = <&hdmi_connector_out>;
-			};
-		};
-	};
-
-	isp: rkisp@fdff0000 {
-		compatible = "rockchip,rk3568-rkisp";
-		reg = <0x0 0xfdff0000 0x0 0x10000>;
-		interrupts = <GIC_SPI 57 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 58 IRQ_TYPE_LEVEL_HIGH>,
-			     <GIC_SPI 60 IRQ_TYPE_LEVEL_HIGH>;
-		interrupt-names = "mipi_irq", "mi_irq", "isp_irq";
-		clocks = <&cru ACLK_ISP>, <&cru HCLK_ISP>, <&cru CLK_ISP>;
-		clock-names = "aclk_isp", "hclk_isp", "clk_isp";
-		resets = <&cru SRST_ISP>, <&cru SRST_H_ISP>;
-		reset-names = "isp", "isp-h";
-		rockchip,grf = <&grf>;
-		power-domains = <&power RK3568_PD_VI>;
-		iommus = <&isp_mmu>;
-		rockchip,iq-feature = /bits/ 64 <0x1BFBFFFE67FF>;
-	};
-
-	isp_mmu: iommu@fdff1a00 {
-		compatible = "rockchip,rk3568-iommu";
-		reg = <0x0 0xfdff1a00 0x0 0x100>;
-		interrupts = <GIC_SPI 59 IRQ_TYPE_LEVEL_HIGH>;
-		clocks = <&cru ACLK_ISP>, <&cru HCLK_ISP>;
-		clock-names = "aclk", "iface";
-		power-domains = <&power RK3568_PD_VI>;
-		rockchip,disable-mmu-reset;
-		#iommu-cells = <0>;
-	};
-
-	isp_vir0: rkisp-vir0 {
-		compatible = "rockchip,rkisp-vir";
-		rockchip,hw = <&isp>;
-
-		port {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			isp_in: endpoint@0 {
-				reg = <0>;
-				remote-endpoint = <&csi_out>;
 			};
 		};
 	};
@@ -345,6 +257,46 @@
 	status = "okay";
 };
 
+&csi2_dphy0 {
+	status = "okay";
+
+	ports {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		port@0 {
+			reg = <0>;
+			#address-cells = <1>;
+			#size-cells = <0>;
+
+			xc7160_in: endpoint@0 {
+				reg = <0>;
+				remote-endpoint = <&xc7160_out>;
+				data-lanes = <1 2 3 4>;
+			};
+
+			imx335_in: endpoint@1 {
+				reg = <1>;
+				remote-endpoint = <&imx335_out>;
+				data-lanes = <1 2 3 4>;
+			};
+		};
+
+		port@1 {
+			reg = <1>;
+
+			csi_out: endpoint {
+				remote-endpoint = <&isp_in>;
+				data-lanes = <1 2 3 4>;
+			};
+		};
+	};
+};
+
+&csi2_dphy_hw {
+	status = "okay";
+};
+
 &dsi0 {
 	#address-cells = <1>;
 	#size-cells = <0>;
@@ -382,6 +334,28 @@
 &dsi0_out {
 	dsi_out_panel: endpoint {
 		remote-endpoint = <&dsi_in_panel>;
+	};
+};
+
+&isp {
+	status = "okay";
+};
+
+&isp_mmu {
+	status = "okay";
+};
+
+&isp_vir0 {
+	status = "okay";
+
+	port {
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		isp_in: endpoint@0 {
+			reg = <0>;
+			remote-endpoint = <&csi_out>;
+		};
 	};
 };
 
